--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Мои данные
+              Некоторые факты обо мне
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              Мой тг https://t.me/YuraGLOL
+                Моё день рождение 6 ноября 2011 года
               <br>
-              Мой дискорд zakunyli_bota
+                Я участвовал и выйгрывал в соревнованиях по робототехнике и прогроммирыванию
             </div>
           </div>
         </div>
