--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="accordion-body">
                 Моё день рождение 6 ноября 2011 года
               <br>
-                Я участвовал и выйгрывал в соревнованиях по робототехнике и прогроммирыванию
+                Я участвовал и выйгрывал в соревнованиях по робототехнике и программированию
             </div>
           </div>
         </div>
