--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-    <span class="placeholder col-12 bg-danger"><h1>Я юра</h1></span>
+    <span class="placeholder col-12 bg-danger"><center><h1>Я юра</h1></center></span>
 <div class="container">    
     <p>
         Я юра мне скоро 13 лет и мне нравиться изучать программирование и всё что с ним связанно
