--- a/index.html
+++ b/index.html
@@ -6,6 +6,55 @@
             background-image: url('img/d4193d3596427ce7646931bf10367fe6.jpg');
             background-size: cover;
         }
+        
+        .droplet-text {
+          animation: shake 0.5s infinite;
+        }
+
+        @keyframes shake {
+          0% {
+            transform: translate(0, 0);
+          }
+          20% {
+            transform: translate(-3px, 3px);
+          }
+          40% {
+            transform: translate(3px, -3px);
+          }
+          60% {
+            transform: translate(-3px, 3px);
+          }
+          80% {
+            transform: translate(3px, -3px);
+          }
+          100% {
+            transform: translate(0, 0);
+          }
+        }
+
+        .wavy-text {
+          animation: wave 2s infinite;
+        }
+
+        @keyframes wave {
+          0% {
+            transform: translateY(0px);
+          }
+          25% {
+            transform: translateY(-5px);
+          }
+          50% {
+            transform: translateY(5px);
+          }
+          75% {
+            transform: translateY(-5px);
+          }
+          100% {
+            transform: translateY(0px);
+          }
+        }
+
+
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,9 +63,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-    <span class="placeholder col-12 bg-danger"><center><h1>Я юра</h1></center></span>
+    <span class="placeholder col-12 bg-danger"><center><h1 class="droplet-text">Я юра</h1></center></span>
 <div class="container">    
-    <p>
+    <p class="wavy-text">
         Я юра мне скоро 13 лет и мне нравиться изучать программирование и всё что с ним связанно
     </p>
     <br>
@@ -64,9 +113,9 @@
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                Моё день рождение 6 ноября 2011 года
+              Мой день рождение 6 ноября 2011 года
               <br>
-                Я участвовал и выйгрывал в соревнованиях по робототехнике и программированию
+              Я участвовал и выйгрывал в соревнованиях по робототехнике и прогроммирыванию
             </div>
           </div>
         </div>
