--- a/index.html
+++ b/index.html
@@ -69,6 +69,26 @@
         Я юра мне скоро 13 лет и мне нравиться изучать программирование и всё что с ним связанно
     </p>
     <br>
+    <button class="interactive-button"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Кликни меня!</a></button>
+
+    <style>
+      .interactive-button {
+        background-color: #4CAF50;
+        color: #fff;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+      .interactive-button:hover {
+        background-color: #3e8e41;
+      }
+      .interactive-button:active {
+        background-color: #3e8e41;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      }
+    </style>
+    <br>
     <p>
         Моя любимая песня это "Место для шага вперёд" от группы "Кино"
     </p>
@@ -116,6 +136,10 @@
               Мой день рождение 6 ноября 2011 года
               <br>
               Я участвовал и выйгрывал в соревнованиях по робототехнике и прогроммирыванию
+              <br>
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Моё фото</a>
+              <br>
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Моя игра созданная на юнити</a>
             </div>
           </div>
         </div>
